--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script defer src="/js/app.js"></script>
 </head>
 <body>
-  
+  <header>Media Queries</header>
+  <aside>Side</aside>
+  <main>Content</main>
+  <footer>Footer</footer>
 </body>
 </html>
