re-shape outer most layout for messages, main content and bottom

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
   <script defer src="/js/app.js"></script>
 </head>
 <body>
-  <header>Media Queries</header>
-  <aside>Side</aside>
-  <main>Content</main>
-  <footer>Footer</footer>
+  <header>
+    <h1>messages</h1>
+  </header>
+  <main>Messages,image an choices
+    <aside>Side - Timer</aside>
+    <aside>Side - Timer</aside>
+    <aside>Side - Timer</aside>
+  </main>
+  <footer>Bottom - skip button</footer>
 </body>
 </html>
