add sections inside of main

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
   <header>
     <h1>messages</h1>
   </header>
-  <main>Messages,image an choices
-    <aside>Side - Timer</aside>
-    <aside>Side - Timer</aside>
-    <aside>Side - Timer</aside>
+  <main>
+    <section class="section" id="time-clock">
+      <h1>Timer</h1>
+    </section>
+    <section class="section" id="main-content">
+      <h1>Image and choices</h1>
+    </section>
+    <section class="section" id="score-board">
+      <h1>score-board</h1>
+    </section>
   </main>
   <footer>Bottom - skip button</footer>
 </body>
