--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       <h1>Timer</h1>
     </section>
     <section class="section" id="main-content">
-      <h1>Image and choices</h1>
+      <div class="game-area" id="image-area">
+        <h1>image</h1>
+      </div>
+      <div class="game-area" id="choice-area">
+        <h1>choices</h1>
+      </div>
     </section>
     <section class="section" id="score-board">
       <h1>score-board</h1>
