--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Name That Quarterback!</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="/css/style.css">
   <script defer src="/js/app.js"></script>
@@ -22,7 +23,12 @@
         <h1>image</h1>
       </div>
       <div class="game-area" id="choice-area">
-        <h1>choices</h1>
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <button class="btn btn-lg btn-primary" type="button">Button</button>
+          <button class="btn btn-lg btn-primary" type="button">Button</button>
+          <button class="btn btn-lg btn-primary" type="button">Button</button>
+          <button class="btn btn-lg btn-primary" type="button">Button</button>
+        </div>
       </div>
     </section>
     <section class="section" id="score-board">
