add skipp and reset buttons

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <h1>score-board</h1>
     </section>
   </main>
-  <footer>Bottom - skip button</footer>
+  <footer class="skip-reset">
+    <button type="button" class="btn-md btn-primary btn-md">Skip</button>
+    <button type="button" class="btn btn-secondary btn-md">Reset</button>
+  </footer>
 </body>
 </html>
