add cached element

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>messages</h1>
+    <h1 id="msg">messages</h1>
   </header>
   <main>
     <section class="section" id="time-clock">
@@ -36,8 +36,8 @@
     </section>
   </main>
   <footer class="skip-reset">
-    <button type="button" class="btn-md btn-primary btn-md">Skip</button>
-    <button type="button" class="btn btn-secondary btn-md">Reset</button>
+    <button type="button" class="btn-md btn-primary btn-md" id="next">Skip</button>
+    <button type="button" class="btn btn-secondary btn-md" id="startOver">Reset</button>
   </footer>
 </body>
 </html>
