add appendchild function for images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
   </main>
   <footer class="skip-reset">
-    <button type="button" class="btn-md btn-primary btn-md" id="next">Skip</button>
+    <button type="button" class="btn-md btn-primary btn-md" id="next">Next</button>
     <button type="button" class="btn btn-secondary btn-md" id="startOver">Reset</button>
   </footer>
 </body>
