--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <section class="section" id="main-content">
       <div class="game-area" id="image-area">
         <h1>image</h1>
+        <img/>
       </div>
       <div class="game-area" id="choice-area">
         <div class="d-grid gap-2 col-6 mx-auto">
