render image to html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
     </section>
     <section class="section" id="main-content">
       <div class="game-area" id="image-area">
-        <h1>image</h1>
-        <img/>
       </div>
       <div class="game-area" id="choice-area">
         <div class="d-grid gap-2 col-6 mx-auto">
-          <button class="btn btn-lg btn-primary" type="button">Button</button>
+          <button id="submit" class="btn btn-lg btn-primary" type="button">submit</button>
           <button class="btn btn-lg btn-primary" type="button">Button</button>
           <button class="btn btn-lg btn-primary" type="button">Button</button>
           <button class="btn btn-lg btn-primary" type="button">Button</button>
