add btn functions

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </div>
       <div class="game-area" id="choice-area">
         <div class="d-grid gap-2 col-6 mx-auto">
-          <button id="submit" class="btn btn-lg btn-primary" type="button">submit</button>
-          <button class="btn btn-lg btn-primary" type="button">Button</button>
-          <button class="btn btn-lg btn-primary" type="button">Button</button>
-          <button class="btn btn-lg btn-primary" type="button">Button</button>
+          <button class="btn btn-lg btn-primary option" id = "0" type="button">A</button>
+          <button class="btn btn-lg btn-primary option" id = "1" type="button">B</button>
+          <button class="btn btn-lg btn-primary option" id = "2" type="button">C</button>
+          <button class="btn btn-lg btn-primary option" id = "3" type="button">D</button>
         </div>
       </div>
     </section>
