--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="section" id="main-content">
       <div class="game-area" id="image-area">
-        
+        <img  src="" alt="">
       </div>
       <div class="game-area" id="choice-area">
         <div class="d-grid gap-2 col-6 mx-auto">
