--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Name That Quarterback!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link 
+		id="favicon" 
+    rel="icon"
+    href="../images/ntqFavicon.png"
+    type="image/png" 
+    sizes="32x32"
+  >
 <link rel="stylesheet" href="/css/style.css">
   <script defer src="/js/app.js"></script>
 </head>
