add padding and border width to elements

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <img  src="" alt="">
       </div>
       <div class="game-area" id="choice-area">
-        
+      </div>
+      <div class="skip-reset">
+        <button type="button" class="btn-md btn-primary btn-md" id="next">Next</button>
+        <button type="button" class="btn btn-secondary btn-md" id="startOver">Reset</button>
       </div>
     </section>
     <section class="section" id="score-board">
       <h1>0</h1>
     </section>
   </main>
-  <footer class="skip-reset">
-    <button type="button" class="btn-md btn-primary btn-md" id="next">Next</button>
-    <button type="button" class="btn btn-secondary btn-md" id="startOver">Reset</button>
-  </footer>
+ 
 </body>
 </html>
