--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="skip-reset">
         <button type="button" class="btn-md btn-primary btn-md" id="next">Next</button>
-        <button type="button" class="btn btn-secondary btn-md" id="startOver">Reset</button>
+        <button type="button" class="btn-md btn-primary btn-md" id="startOver">Reset</button>
       </div>
     </section>
     
