--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Name That Quarterback!</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link 
 		id="favicon" 
     rel="icon"
@@ -13,12 +13,12 @@
     type="image/png" 
     sizes="32x32"
   >
-<link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script defer src="/js/app.js"></script>
 </head>
 <body>
   <header>
-    <h1 id="msg">messages</h1>
+    <div id="msg"></div>
   </header>
   <main>
     <section class="section" id="time-clock">
@@ -40,6 +40,6 @@
       <h1>0</h1>
     </section>
   </main>
- 
 </body>
 </html>
+ 
