add 4 arrays and data

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </head>
 <body>
   <header>
-    <div id="msg"></div>
+    <div id="msg">
+    </div>
   </header>
   <main>
     <section class="section" id="time-clock">
-      <h1>Timer</h1> 
+      
     </section>
     <section class="section" id="main-content">
       <div class="game-area" id="image-area">
